tests/neg-custom-args/captures/implied-ro.check
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/implied-ro.scala:12:16 -----------------------------------
12 |  val _: C^{} = c // error
   |                ^
   |Found:    (c : C^{any.rd})
   |Required: C
   |
   |Note that capability `any.rd` cannot flow into capture set {}.
   |
   |where:    any is a root capability classified as Unscoped created in value c when constructing instance C with contributing field val r
   |
   | longer explanation available when compiling with `-explain`
